Fixed score box sticking out

--- a/src/jquery.bracket.scss
+++ b/src/jquery.bracket.scss
@@ -109,7 +109,6 @@ div.jQBracket {
 
     div.score {
       float: right;
-      padding: $boxPadding;
       background-color: rgba(255, 255, 255, 0.3);
       text-align: center;
       box-sizing: border-box;
